update container exec
